--- a/.gdbinit.tmpl
+++ b/.gdbinit.tmpl
@@ -19,8 +19,8 @@ define hook-stop
   set $lastcs = $cs
 end
 
-echo + target remote localhost:1234\n
-target remote localhost:1234
+# echo + target remote localhost:1234\n
+# target remote localhost:1234
 
 # If this fails, it's probably because your GDB doesn't support ELF.
 # Look at the tools page at
